# ai-tool

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  readme.md  requirements.txt  src_simple_bot_Version2.py
.github/workflows/: ci.yml
src/ai_bots/: cli.py  config.py  logging_setup.py
src/ai_bots.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_bots/api/: server.py
src/ai_bots/rag/: pipeline.py
tests/: test_api.py  test_cli.py
